fix shadows add z-index

--- a/assets/style.css
+++ b/assets/style.css
@@ -35,11 +35,15 @@ main{
 .cards{
     height: 430px;
     position: relative;
+    .card-shadow{
+        box-shadow: 0px 0px 20px;
+    }
 }
 .cards:hover{
     .pin{
         display: none;
     }
+    
 }
 
 #overlay {
@@ -65,4 +69,8 @@ main{
     cursor: pointer;
     position: relative;
     top: 35px;
+    .card-shadow{
+        box-shadow: 0px 0px 50px ;
+    }
+    z-index: 1;
 }
